--- a/public_html/bacs350/pattern/header/header.html
+++ b/public_html/bacs350/pattern/header/header.html
@@ -1,3 +1,7 @@
+<!--
+    This code resides in header.html
+-->
+
 <!doctype html>
 <html lang="en">
 
@@ -29,24 +33,3 @@
             </div>
         </div>
     </header>
-
-    <main>
-        <h1>BLANK UNC PAGE</h1>
-    </main>
-
-
-    <footer>
-        <a href="https://shrinking-world.com">
-            <div class="logo-text">Copyright &copy; 2019 Shrinking World</div>
-            <img class="img-rounded img-responsive" src="https://shrinking-world.com/static/images/SWS_Globe_small.jpg" alt="Shrinking World Solutions" width="150px">
-        </a>
-    </footer>
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-</body>
-
-</html>
